# schoonmaker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  test.py
.github/: dependabot.yml
.github/workflows/: docker.yml  python_lint.yml  python_unittests.yml  yaml-lint.yml
examples/: README.md  github-actions-analyze-fdx-changes.yml  github-actions-fdx-changes-pr.yml  github-actions-fdx-changes-push.yml  requirements-ci.txt
fdx_tooling_project/: .gitignore  README.md  pyproject.toml
fdx_tooling_project/src/fdx_tooling/: cli.py  fountain.py  models.py  parser.py
fdx_tooling_project/tests/: test_parser.py
fdx_tooling_project/tests/fixtures/: sample.fdx
notes/: FDX_TODO.md  IDEAS.md
samples/: final_draft_12_sample.fdx  final_draft_13_sample.fdx
schoonmaker/: __main__.py  ci_fdx_diff.py  ci_report_md.py  cli.py  cli_arg_parser.py  element.py  element_attribute.py  element_tag.py  element_type.py  metadata.py  parse_json_diff.py  parser.py  source_file_info.py  utils.py
schoonmaker/fdx/: __init__.py  fountain.py  models.py  parser.py
scripts/: unit_tests.sh
tests/: conftest.py  helpers.py  test_ci_fdx_diff.py  test_ci_report_md.py  test_cli_args.py  test_cli_output.py  test_display_boards.py  test_element.py  test_fdx_parser.py  test_fdx_unparsed_tags.py  test_installed_package.py  test_list_items.py  test_metadata.py  test_parse_json_diff.py  test_parse_output_fields.py  test_parser.py  test_source_file_info.py
(+3 files in other folders)
