[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdx-tooling"
version = "0.1.0"
description = "Parse Final Draft FDX files, export JSON AST, and convert to Fountain"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI" }
]
dependencies = []

[project.scripts]
fdx-tool = "fdx_tooling.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
